[package]
name = "axum_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tower = { version = "0.4.0", features = ["util", "timeout"] }
tower-http = { version = "0.3.0", features = ["add-extension", "trace"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
serde = { version = "1.0.0", features = ["derive"] }
